--- a/static/Test.html
+++ b/static/Test.html
@@ -64,8 +64,11 @@
           </div>
         </nav>
       </div></header> 
-    
-    
+
+      <div align="center">
+      <img src="images/test.JPG">
+      </div>
+
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-feb1"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Made by XXX, XXX, XXX</p>
       </div></footer>
